Wed May  5 16:26:13 1999  Vladimir Makarov  <vmakarov@tofu.to.cygnus.com>

	* function.c (purge_addressof_replacements): Rename into
 	purge_bitfield_addressof_replacements.
	(purge_addressof_replacements): New variable.
	(purge_addressof_1): Add code for changing addressof in notes for
 	field values which are extracted by usage MEM with narrower mode.
	(purge_addressof): Initialize purge_bitfield_addressof_replacements.

Wed May  5 07:40:02 1999  Nick Clifton  <nickc@cygnus.com>

	Patch from: Nick Burrett  <nick.burrett@btinternet.com>
	* config/arm/arm.h (ARM_MCOUNT_NAME): Define.
	(FUNCTION_PROFILER): Remove assembler dialect dependency and use
	ARM_MCOUNT_NAME.
	(TRAMPOLINE_TEMPLATE): Remove assembler dialect dependency.
	
	* config/arm/aof.h (ARM_MCOUNT_NAME): Define.

1999-05-05 09:58 -0400  Zack Weinberg  <zack@rabi.columbia.edu>

	* gcc.c (default_compilers): Fix brace nesting bug.
	* objc/lang-specs.h: Use %i, not %g.mi, for the input file
	when processing an .mi file.

Tue May  4 13:17:55 1999  Mark Mitchell  <mark@codesourcery.com>

	* resource.c (mark_set_resources): Handle UNSPEC_VOLATILE,
	ASM_INPUT, TRAP_IF, and ASM_OPERANDS just like in
	mark_referenced_resources.

Mon May  3 22:38:41 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000/aix43.h (SUBTARGET_OVERRIDE_OPTIONS): Change non-PowerPC
	and AIX64 combination to warning.  Add warning for disabling
	PowerPC64 support when using 64-bit mode.
	(LIB_SPEC): Do not link with libg.a in 64-bit mode.
	(LINK_SPEC): Do not export libg.exp symbols in 64-bit mode.
	* rs6000/rs6000.h (MY_ISCOFF): Treat import/export files as valid
	XCOFF files.
	(read_only_data_section, private_data_section,
	read_only_private_data_section): Always align CSECTs to doubleword
	boundary regardless of mode.
	(TEXT_SECTION_ASM_OP): Align text CSECT on doubleword boundary in
	64-bit mode.
	(DATA_SECTION_ASM_OP): Always align CSECT to doubleword boundary.
	(ASM_OUTPUT_LOCAL): Use rounded size in 64-bit mode to